Update copyright date. Refactor some of the data type handling.